--- a/sass/master.sass
+++ b/sass/master.sass
@@ -3,6 +3,9 @@
 body
   font: 9pt/1.6em "Lucida Grande", "Lucida Sans Unicode", sans-serif
   margin: 0 auto 2em
+
+.wrapped
+  margin: 0 auto
   width: 960px
 
 #header
@@ -11,13 +14,22 @@ body
   padding: 10px 20px
 
 #article
+  margin-left: 220px
   width: 540px
+
+#aside
+  position: absolute
+  width: 200px
 
 #global
   border-bottom: 1px solid #D8DFEA
   background-color: #EDEFF4
   padding: 10px 20px 0
-
+  
+  .wrapped
+    padding-left: 220px
+    width: 740px
+  
 #nav
   margin-bottom: -1px
   overflow: hidden
@@ -35,6 +47,7 @@ body
       border: 1px solid #D8DFEA
       border-bottom: 1px solid white
       background-color: white
+      color: black
   
 a
   text-decoration: none
