--- a/sass/master.sass
+++ b/sass/master.sass
@@ -4,6 +4,14 @@ body
   font: 9pt/1.6em "Lucida Grande", "Lucida Sans Unicode", sans-serif
   margin: 0 auto 2em
 
+h2
+  font-size: 1.4em
+  margin-right: 20px
+  float: left
+
+p
+  margin: 1em 0
+
 .wrapped
   margin: 0 auto
   width: 960px
@@ -18,13 +26,30 @@ body
   width: 540px
 
 #aside
+  border-bottom: 1px solid #94A3C4
   position: absolute
+  margin-top: 20px
   width: 200px
+  
+  img
+    margin-bottom: 10px
+  
+  .section
+    border-top: 1px solid #94A3C4
+    border-right: 1px solid #D8DFEA
+      
+    h3, .core
+      padding: 0.2em 0.5em
+    
+    h3
+      background-color: #ECEFF5
+      margin-top: 0
 
 #global
   border-bottom: 1px solid #D8DFEA
   background-color: #EDEFF4
-  padding: 10px 20px 0
+  margin-bottom: 20px
+  padding: 20px 20px 0
   
   .wrapped
     padding-left: 220px
