--- a/sass/master.sass
+++ b/sass/master.sass
@@ -4,13 +4,17 @@ body
   font: 9pt/1.6em "Lucida Grande", "Lucida Sans Unicode", sans-serif
   margin: 0 auto 2em
 
+h1
+  color: white
+  font-size: 1.4em
+
 h2
   font-size: 1.4em
   margin-right: 20px
   float: left
 
-p
-  margin: 1em 0
+p, ul
+  margin: 0.5em 0
 
 .wrapped
   margin: 0 auto
@@ -18,8 +22,13 @@ p
 
 #header
   background-color: #3B5998
-  color: white
+  color: #98A7C7
+  overflow: hidden
   padding: 10px 20px
+  
+  h1
+    float: left
+    margin-right: 1em
 
 #article
   margin-left: 220px
@@ -43,7 +52,7 @@ p
     
     h3
       background-color: #ECEFF5
-      margin-top: 0
+      margin: 0
 
 #global
   border-bottom: 1px solid #D8DFEA
